--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Учим GIT</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Заголовок</h1>
+    <div class="header">
+        <h1>Привет</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae quia ratione hic provident, fuga corporis maiores, exercitationem quis laboriosam voluptatem vitae et eum quibusdam consequuntur, quaerat impedit ipsum nemo cum!
+        Modi odio, repudiandae vitae mollitia quia placeat, aperiam, nobis natus unde amet cupiditate expedita delectus. Reprehenderit, architecto ducimus temporibus similique doloribus magnam exercitationem non tenetur necessitatibus, eius tempore facere cupiditate!
+        Dolor reprehenderit nemo ipsam etum officiis porro hic voluptate mollitia eius rem. Quidem voluptates magni reprehenderit nihil doloribus vero expedita dolores repellat inventore! A sed numquam vitae quam maiores.
+        </p>sse eaque totam! Quos quidem quas libero sint voluptas, nulla provident quia laudantium sunt incidunt iusto aspernatur. Deleniti culpa ipsum alias non cumque! Quae, omnis sequi!
+        Nostrum harum, qui quo dolores volupta
+    </div>
 </body>
 </html>
